--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -56,32 +56,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same lengths! Now checking if anagram...\n",
+      "This is an anagram!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
-    "\n",
+    "  # First check if the words are the same length, they need to be to be an anagram\n",
+    "  if len(word_a) == len(word_b):\n",
+    "    # Make both words lowercase \n",
+    "    word_a = word_a.lower()\n",
+    "    word_b = word_b.lower()\n",
+    "    print(\"Same lengths! Now checking if anagram...\")\n",
+    "    # Convert words to lists of letters\n",
+    "    list_word_a = list(word_a)\n",
+    "    list_word_b = list(word_b)\n",
+    "    # Use the sorted function to sort the letters in the same order and check if the lists are the same \n",
+    "    if sorted(list_word_a) == sorted(list_word_b):\n",
+    "      print(\"This is an anagram!\")\n",
+    "      return True\n",
+    "  elif len(word_a) != len(word_b):\n",
+    "    print(\"Not same length, not possible anagram, not checking further\")\n",
+    "  else:\n",
+    "    print(\"invalid input\")\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not same length, not possible anagram, not checking further\n"
+     ]
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Night\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same lengths! Now checking if anagram...\n",
+      "This is an anagram!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -97,12 +158,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same lengths! Now checking if anagram...\n",
+      "This is an anagram!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
+    "  # First check if the words are the same length, they need to be to be an anagram\n",
+    "  if is_case_sensitive == False:\n",
+    "    if len(word_a) == len(word_b):\n",
+    "    # Make both words lowercase \n",
+    "      word_a = word_a.lower()\n",
+    "      word_b = word_b.lower()\n",
+    "      print(\"Same lengths! Now checking if anagram...\")\n",
+    "      # Convert words to lists of letters\n",
+    "      list_word_a = list(word_a)\n",
+    "      list_word_b = list(word_b)\n",
+    "      # Use the sorted function to sort the letters in the same order and check if the lists are the same \n",
+    "      if sorted(list_word_a) == sorted(list_word_b):\n",
+    "        print(\"This is an anagram!\")\n",
+    "        return True\n",
+    "  if is_case_sensitive == True:\n",
+    "    if len(word_a) == len(word_b):\n",
+    "      print(\"Same lengths! Now checking if anagram...\")\n",
+    "      # Convert words to lists of letters\n",
+    "      list_word_a = list(word_a)\n",
+    "      list_word_b = list(word_b)\n",
+    "      # Use the sorted function to sort the letters in the same order and check if the lists are the same \n",
+    "      if sorted(list_word_a) == sorted(list_word_b):\n",
+    "        print(\"This is an anagram!\")\n",
+    "        return True\n",
+    "      else:\n",
+    "        print(\"Not an anagram!\")\n",
+    "        return False\n",
+    "  elif len(word_a) != len(word_b):\n",
+    "    print(\"Not same length, not possible anagram, not checking further\")\n",
+    "  else:\n",
+    "    print(\"invalid input\")\n",
+    "\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\", False) # True"
@@ -110,18 +221,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same lengths! Now checking if anagram...\n",
+      "Not an anagram!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"listen\", True) # False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same lengths! Now checking if anagram...\n",
+      "Not an anagram!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Listen\", True) # False"
    ]
@@ -139,7 +288,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new-learner",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
